--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,19 +1,21 @@
 name: Generate Snake Animation
 
 on:
-  schedule:
-    - cron: "0 */12 * * *" # jalan tiap 12 jam
-  workflow_dispatch:       # bisa juga dijalankan manual
-  push:
-    branches:
-      - main
+  schedule: # setiap 12 jam
+    - cron: "0 */12 * * *"
+  workflow_dispatch: # bisa dijalankan manual
+
+permissions:
+  contents: write  # penting biar bisa push ke repo
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false  # penting biar pakai token personal, bukan default
 
       - name: Generate Snake
         uses: Platane/snk@v3
@@ -24,10 +26,9 @@ jobs:
             dist/snake-dark.svg?palette=github-dark
             dist/snake-light.svg?palette=github-light
 
-      - name: Push Snake files to output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      - name: Push to output branch
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: output
+          publish_dir: dist
